UMB-382 -- Fixed header alignment bug

--- a/src/Dfc.DiscoverSkillsAndCareers.WebApp/src/scss/_legacy.scss
+++ b/src/Dfc.DiscoverSkillsAndCareers.WebApp/src/scss/_legacy.scss
@@ -24,7 +24,15 @@
   width: 100%;
   @extend %clearfix;
 
+  div {
+    vertical-align: baseline;
+  }
+
   .header-proposition {
+    padding-top: 10px;
+    @media (min-width: 641px) {
+      padding-top: 0;
+    }
     .content {
       margin: 0 15px;
     }
